<resources>
    <string name="app_name">Babelblock</string>
    <string name="tts">Text To Speech</string>
    <string name="stt">Speech To Text</string>
    <string name="trs">Translate</string>
    <string name="block">Block</string>
    <string name="title_activity_block">BlockActivity</string>
    <string name="main_title">Pipelining translation project</string>

    <!-- Main -->
    <string name="main_pipeline_title">Translation Pipeline Project</string>

    <!-- Menu -->
    <string name="main_menu_home">Home</string>
    <string name="main_menu_tts">Text to Speech</string>
    <string name="main_menu_translation">Translation</string>
    <string name="main_menu_stt">Speech to Text</string>
    <string name="main_menu_block">Block</string>
    <string name="main_menu_pipeline">Translation pipeline</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_menu">menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string-array name="languages">
        <item>French</item>
        <item>Arabic</item>
        <item>English</item>
    </string-array>
</resources>